--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.0",
+    "@storybook/addon-a11y": "^8.4.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.2.0"
   },
   "scripts": {
     "dev": "vite",
