--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@storybook/react": "^8.3.2",
     "@storybook/react-vite": "^8.3.2",
     "@storybook/test": "^8.3.2",
+    "@types/node": "^22.10.2",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
@@ -50,6 +51,7 @@
     "prop-types": "^15.8.1",
     "storybook": "^8.3.2",
     "typescript": "^5.7.2",
+    "undici-types": "^6.20.0",
     "vite": "^5.2.0"
   },
   "resolutions": {
