--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,7 +59,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: "./dist.storybook"
+          path: "./storybook-static"
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
